--- a/paginas/sobreNosotros.html
+++ b/paginas/sobreNosotros.html
@@ -16,10 +16,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="paginas/pastas.html">Pastas</a></li>
-                <li><a href="paginas/postres.html">Postres</a></li>
-                <li><a href="paginas/sobreNosotros.html">Sobre nosotros</a></li>
-                <li><a href="paginas/contacto.html">Contacto</a></li>
+                <li><a href="pastas.html">Pastas</a></li>
+                <li><a href="postres.html">Postres</a></li>
+                <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
