primeras animaciones - bt

--- a/paginas/sobreNosotros.html
+++ b/paginas/sobreNosotros.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nosotros</title>
     <link rel="icon" href="../imagenes/favicon.png" type="image/png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
@@ -27,23 +31,32 @@
         <h2 class="tituloCentrado">Sobre nosotros</h2>
     </section>
     <section class="cuerpo seccionInfo">
-        <p class="centradoIzquierda">
-            Somos un grupo de emprendedores con grandes conocimientos y experiencia en el rubro gastronómico con el objetivo de ofrecer 
-            productos de gran calidad para todos nuestros clientes, deleitando desde los paladares mas sencillos hasta los más exigentes.
-        </p>
+        <div data-aos="fade-right" data-aos-duration="1500">
+            <p class="centradoIzquierda">
+                Somos un grupo de emprendedores con grandes conocimientos y experiencia en el rubro gastronómico con el objetivo de ofrecer 
+                productos de gran calidad para todos nuestros clientes, deleitando desde los paladares mas sencillos hasta los más exigentes.
+            </p>
+        </div>
+        <div class="borde"></div>          
     </section>
     <section class="cuerpo seccionInfo">
-        <p class="centradoDerecha">
-            Día a día renovamos el entusiasmo y el compromiso de llevarles a sus hogares las mejores pastas y postres, con la debida seriedad
-            y responsabilidad, cumpliendo con cada una de las exigencias y pedidos de aquellas personas que confían en nuestros productos.
-        </p>
+        <div class="borde"></div>
+        <div data-aos="fade-left" data-aos-duration="1500">
+            <p class="centradoDerecha">
+                Día a día renovamos el entusiasmo y el compromiso de llevarles a sus hogares las mejores pastas y postres, con la debida seriedad
+                y responsabilidad, cumpliendo con cada una de las exigencias y pedidos de aquellas personas que confían en nuestros productos.
+            </p>
+        </div>
     </section>
     <section class="cuerpo seccionInfo">
-        <p class="centradoIzquierda">
-            Con el fin de que todas las personas tengan al alcance de la mano productos artesanales de primera calidad, hemos
-            decidido incorporar una línea de pastas y postres aptos para celíacos, que junto con la línea integral, light y sin sal,
-            nos acerca un poco más a todos ustedes.
-        </p>
+        <div data-aos="fade-right" data-aos-duration="1500">
+            <p class="centradoIzquierda">
+                Con el fin de que todas las personas tengan al alcance de la mano productos artesanales de primera calidad, hemos
+                decidido incorporar una línea de pastas y postres aptos para celíacos, que junto con la línea integral, light y sin sal,
+                nos acerca un poco más a todos ustedes.
+            </p>
+        </div>
+        <div class="borde"></div>
     </section>
     <footer>
         <div>
@@ -60,4 +73,10 @@
         </div>    
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+    crossorigin="anonymous">
+</script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>AOS.init();</script>
 </html>
