--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pastas Trivelli's</title>
     <link rel="icon" href="imagenes/favicon.png" type="image/png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
         <div class="headerLogo">
-            <a href="index.html"><img src="imagenes/logo.png" alt="Logo principal"></a>    
+            <a href="index.html"><img src="imagenes/logo.png" alt="Logo principal"></a>
             <h1>Pastas Trivelli's</h1>
         </div>
         <nav>
@@ -26,33 +30,33 @@
     </header>
     <section class="slider">
         <figure>
-            <img src="imagenes/slider_uno.png" alt="Slide 1"/>
-            <img src="imagenes/slider_dos.png" alt="Slide 2"/>
-            <img src="imagenes/slider_tres.png" alt="Slide 3"/>
+            <img src="imagenes/slider_uno.png" alt="Slide 1" />
+            <img src="imagenes/slider_dos.png" alt="Slide 2" />
+            <img src="imagenes/slider_tres.png" alt="Slide 3" />
         </figure>
     </section>
     <section class="cuerpo">
         <h2 class="textoPaddingBottom">Recomendados del día:</h2>
         <div class="catalogo">
-            <article class="recomendado recomendadoUno">
+            <article data-aos="flip-left" data-aos-duration="1500" class="recomendado recomendadoUno">
                 <a href="">
                     <img src="imagenes/nioquis.png" alt="Ñoquis de papa">
                     <h3>Ñoquis de papa</h3>
                 </a>
             </article>
-            <article class="recomendado">
+            <article data-aos="flip-right" data-aos-duration="1500" class="recomendado">
                 <a href="">
                     <img src="imagenes/sorrentinos_light.png" alt="Sorrentinos light">
                     <h3>Sorrentinos light</h3>
                 </a>
             </article>
-            <article class="recomendado">
+            <article data-aos="flip-left" data-aos-duration="1500" class="recomendado">
                 <a href="">
                     <img src="imagenes/tallarines_verdura.png" alt="Tallarines de verdura">
                     <h3>Tallarines de verdura</h3>
                 </a>
             </article>
-            <article class="recomendado">
+            <article data-aos="flip-right" data-aos-duration="1500" class="recomendado">
                 <a href="">
                     <img src="imagenes/rogel.png" alt="Torta Rogel">
                     <h3>Torta Rogel</h3>
@@ -62,8 +66,8 @@
     </section>
     <section class="cuerpo">
         <h2>Pedidos:</h2>
-        <p class="textoPaddingBottom">Puedes hacer tus pedidos de Lunes a Sábados de 10 a 18 hs. Encárganos tu pasta o postre antes de las 13 hs.
-            para recibirlas en el día dentro de Montevideo</p>
+        <p class="textoPaddingBottom">Puedes hacer tus pedidos de Lunes a Sábados de 10 a 18 hs. 
+            Encárganos tu pasta o postre antes de las 13 hs. para recibirlas en el día dentro de Montevideo</p>
         <input class="boton" type="submit" value="Hacer Pedido">
     </section>
     <section class="cuerpo">
@@ -75,7 +79,7 @@
         <div>
             <h2>Pastas Trivelli's</h2>
             <p>Generaciones haciendo pastas</p>
-        </div>        
+        </div>
         <div class="redes">
             <p>Date una vuelta por nuestras redes:</p>
             <ul>
@@ -83,7 +87,13 @@
                 <li><a href="#"><img src="imagenes/instagram.png" alt="Instagram"></a></li>
                 <li><a href="#"><img src="imagenes/youtube.png" alt="YouTube"></a></li>
             </ul>
-        </div>    
+        </div>
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+    crossorigin="anonymous">
+</script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>AOS.init();</script>
 </html>
