--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="icon" href="../imagenes/favicon.png" type="image/png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
     <header>
         <div class="headerLogo">
             <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>    
-            <h1>Pastas Trivelli's</h1>      
+            <h1>Pastas Trivelli's</h1>   
         </div>
         <nav>
             <ul>
@@ -24,7 +28,7 @@
         </nav>
     </header>
     <div class="cuerpo">
-        <h2 class="tituloCentrado textoPaddingBottom">Contacto</h2>
+        <h2 class="tituloCentrado textoPaddingBottom animate__animated animate__fadeIn">Contacto</h2>
         <main class="caja">
             <section>
                 <h3>Porque para nosotros lo más importante son nuestros clientes, te invitamos a que nos dejes tu valoración
@@ -66,15 +70,15 @@
                         <p>Una delicia!</p> 
                         <div class="estrellasDeshabilitadas">
                             <input id="unoEstrellaUno" type="checkbox" name="valoracion" value="5" disabled>
-                            <label for="unoEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaUno"><!--★--></label>
                             <input id="unoEstrellaDos" type="checkbox" name="valoracion" value="4" disabled checked>
-                            <label for="unoEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaDos"><!--★--></label>
                             <input id="unoEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
-                            <label for="unoEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaTres"><!--★--></label>
                             <input id="unoEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label for="unoEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaCuatro"><!--★--></label>
                             <input id="unoEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label for="unoEstrellaCinco"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaCinco"><!--★--></label>
                         </div>
                     </li>
                     <li>
@@ -82,15 +86,15 @@
                         <p>Los raviolones integrales son lo más</p>
                         <div class="estrellasDeshabilitadas">
                             <input id="dosEstrellaUno" type="checkbox" name="valoracion" value="5" disabled checked>
-                            <label for="dosEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaUno"><!--★--></label>
                             <input id="dosEstrellaDos" type="checkbox" name="valoracion" value="4" disabled>
-                            <label for="dosEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaDos"><!--★--></label>
                             <input id="dosEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
-                            <label for="dosEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaTres"><!--★--></label>
                             <input id="dosEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label for="dosEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaCuatro"><!--★--></label>
                             <input id="dosEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label for="dosEstrellaCinco"><!--★--></label>                        
+                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaCinco"><!--★--></label>                        
                         </div>
                     </li>
                     <li>
@@ -98,15 +102,15 @@
                         <p>Los sorrentinos van mejor con bolognesa</p>
                         <div class="estrellasDeshabilitadas">
                             <input id="tresEstrellaUno" type="checkbox" name="valoracion" value="5" disabled>
-                            <label for="tresEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaUno"><!--★--></label>
                             <input id="tresEstrellaDos" type="checkbox" name="valoracion" value="4" disabled>
-                            <label for="tresEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaDos"><!--★--></label>
                             <input id="tresEstrellaTres" type="checkbox" name="valoracion" value="3" disabled checked>
-                            <label for="tresEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaTres"><!--★--></label>
                             <input id="tresEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label for="tresEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaCuatro"><!--★--></label>
                             <input id="tresEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label for="tresEstrellaCinco"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaCinco"><!--★--></label>
                         </div>
                     </li>
                     <li>
@@ -114,15 +118,15 @@
                         <p>Todo muy rico, la atención de los chicos es excelente</p>
                         <div class="estrellasDeshabilitadas">
                             <input id="cuatroEstrellaUno" type="checkbox" name="valoracion" value="5" disabled checked>
-                            <label for="cuatroEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaUno"><!--★--></label>
                             <input id="cuatroEstrellaDos" type="checkbox" name="valoracion" value="4" disabled>
-                            <label for="cuatroEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaDos"><!--★--></label>
                             <input id="cuatroEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
-                            <label for="cuatroEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaTres"><!--★--></label>
                             <input id="cuatroEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label for="cuatroEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaCuatro"><!--★--></label>
                             <input id="cuatroEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label for="cuatroEstrellaCinco"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaCinco"><!--★--></label>
                         </div>
                     </li>
                     <li>
@@ -130,15 +134,15 @@
                         <p>Para los que nos gusta la pasta disfrutamos</p>
                         <div class="estrellasDeshabilitadas">
                             <input id="cuatroEstrellaUno" type="checkbox" name="valoracion" value="5" disabled checked>
-                            <label for="cuatroEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaUno"><!--★--></label>
                             <input id="cuatroEstrellaDos" type="checkbox" name="valoracion" value="4" disabled>
-                            <label for="cuatroEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaDos"><!--★--></label>
                             <input id="cuatroEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
-                            <label for="cuatroEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaTres"><!--★--></label>
                             <input id="cuatroEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label for="cuatroEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaCuatro"><!--★--></label>
                             <input id="cuatroEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label for="cuatroEstrellaCinco"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaCinco"><!--★--></label>
                         </div>
                     </li>
                     <li>
@@ -146,15 +150,15 @@
                         <p>Muy rico todo, los tallarines y el lemon pie. La mejor onda los chicos!</p>
                         <div class="estrellasDeshabilitadas">
                             <input id="siesEstrellaUno" type="checkbox" name="valoracion" value="5" disabled checked>
-                            <label for="siesEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaUno"><!--★--></label>
                             <input id="siesEstrellaDos" type="checkbox" name="valoracion" value="4" disabled>
-                            <label for="siesEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaDos"><!--★--></label>
                             <input id="siesEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
-                            <label for="siesEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaTres"><!--★--></label>
                             <input id="siesEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label for="siesEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaCuatro"><!--★--></label>
                             <input id="siesEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label for="siesEstrellaCinco"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaCinco"><!--★--></label>
                         </div>
                     </li>
                     <li>
@@ -162,22 +166,22 @@
                         <p>Buen producto, entregaron en tiempo y forma</p>
                         <div class="estrellasDeshabilitadas">
                             <input id="sieteEstrellaUno" type="checkbox" name="valoracion" value="5" disabled>
-                            <label for="sieteEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaUno"><!--★--></label>
                             <input id="sieteEstrellaDos" type="checkbox" name="valoracion" value="4" disabled checked>
-                            <label for="sieteEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaDos"><!--★--></label>
                             <input id="sieteEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
-                            <label for="sieteEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaTres"><!--★--></label>
                             <input id="sieteEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label for="sieteEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaCuatro"><!--★--></label>
                             <input id="sieteEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label for="sieteEstrellaCinco"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaCinco"><!--★--></label>
                         </div>
                     </li>
                 </ul>
             </aside>    
         </main>
         <div class="ubicacion">
-                <div>
+                <div class="ubicacionDireccion">
                     <h3>Dónde estamos?</h3>
                     <p>Nos ubicamos en Cordón, calle Guayabo esquina Carlos Roxlo, a pasitos de la Intendencia.</p>    
                 </div>
