--- a/paginas/postres.html
+++ b/paginas/postres.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Postres</title>
     <link rel="icon" href="../imagenes/favicon.png" type="image/png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
@@ -24,7 +28,7 @@
         </nav>
     </header>
     <section class="cuerpo">
-        <h2 class="tituloCentrado">Postres</h2>
+        <h2 class="tituloCentrado animate__animated animate__fadeIn">Postres</h2>
         <h3>Tartas y postres</h3>
         <p>Probá una de nuestras delicias</p>
         <div class="catalogo">
