--- a/paginas/sobreNosotros.html
+++ b/paginas/sobreNosotros.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <link rel="stylesheet" href="../estilos.css">
 </head>
@@ -28,7 +29,7 @@
         </nav>
     </header>
     <section class="cuerpo">
-        <h2 class="tituloCentrado">Sobre nosotros</h2>
+        <h2 class="tituloCentrado animate__animated animate__fadeIn">Sobre nosotros</h2>
     </section>
     <section class="cuerpo seccionInfo">
         <div data-aos="fade-right" data-aos-duration="1500">
