--- a/index.html
+++ b/index.html
@@ -28,13 +28,34 @@
             </ul>
         </nav>
     </header>
-    <section class="slider">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="imagenes/slider_uno.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="imagenes/slider_dos.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="imagenes/slider_tres.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    <!-- <section class="slider">
         <figure>
             <img src="imagenes/slider_uno.png" alt="Slide 1" />
             <img src="imagenes/slider_dos.png" alt="Slide 2" />
             <img src="imagenes/slider_tres.png" alt="Slide 3" />
         </figure>
-    </section>
+    </section> -->
     <section class="cuerpo">
         <h2 class="textoPaddingBottom">Recomendados del día:</h2>
         <div class="catalogo">
