--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pastas Trivelli's</title>
     <link rel="icon" href="imagenes/favicon.png" type="image/png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <link rel="stylesheet" href="estilos.css">
 </head>
@@ -19,45 +17,53 @@
             <a href="index.html"><img src="imagenes/logo.png" alt="Logo principal"></a>
             <h1>Pastas Trivelli's</h1>
         </div>
-        <nav>
-            <ul>
-                <li><a href="paginas/pastas.html">Pastas</a></li>
-                <li><a href="paginas/postres.html">Postres</a></li>
-                <li><a href="paginas/sobreNosotros.html">Sobre nosotros</a></li>
-                <li><a href="paginas/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid justify-content-end">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#desplegable" aria-controls="desplegable" aria-expanded="false">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="desplegable">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link-active" aria-current="page" href="paginas/pastas.html">Pastas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link-active" href="paginas/postres.html">Postres</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link-active" href="paginas/sobreNosotros.html">Sobre nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link-active" href="paginas/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+          </nav>
     </header>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <!-- <div id="carouselExampleControls" class="carousel slide contenedorCarrusel" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="imagenes/slider_uno.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="imagenes/slider_dos.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="imagenes/slider_tres.png" class="d-block w-100" alt="...">
-          </div>
+            <div class="carousel-item active">
+                <img src="imagenes/slider_uno.png" class="imagenSlide" alt="Slide uno">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/slider_dos.png" class="imagenSlide" alt="Slide dos">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/slider_tres.png" class=imagenSlide" alt="Slide tres">
+            </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
         </button>
-      </div>
-    <!-- <section class="slider">
-        <figure>
-            <img src="imagenes/slider_uno.png" alt="Slide 1" />
-            <img src="imagenes/slider_dos.png" alt="Slide 2" />
-            <img src="imagenes/slider_tres.png" alt="Slide 3" />
-        </figure>
-    </section> -->
+    </div> -->
     <section class="cuerpo">
-        <h2 class="textoPaddingBottom">Recomendados del día:</h2>
+        <h2>Recomendados del día:</h2>
         <div class="catalogo">
             <article data-aos="flip-left" data-aos-duration="1500" class="recomendado recomendadoUno">
                 <a href="">
@@ -111,10 +117,8 @@
         </div>
     </footer>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
-    crossorigin="anonymous">
-</script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>AOS.init();</script>
 </html>
