--- a/paginas/pastas.html
+++ b/paginas/pastas.html
@@ -6,54 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pastas</title>
     <link rel="icon" href="../imagenes/favicon.png" type="image/png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
     <header>
         <div class="headerLogo">
-            <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>    
-            <h1>Pastas Trivelli's</h1>      
+            <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
+            <h1>Pastas Trivelli's</h1>
         </div>
-        <nav>
-            <ul>
-                <li><a href="pastas.html">Pastas</a></li>
-                <li><a href="postres.html">Postres</a></li>
-                <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid justify-content-end">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#desplegable" aria-controls="desplegable" aria-expanded="false">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="desplegable">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link-active" aria-current="page" href="pastas.html">Pastas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link-active" href="postres.html">Postres</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link-active" href="sobreNosotros.html">Sobre nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link-active" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+          </nav>
     </header>
     <section class="cuerpo"> 
         <h2 class="tituloCentrado animate__animated animate__fadeIn">Pastas</h2>
         <h3>Pasta pronta</h3>
         <p>Las pastas artesanales más ricas directamente a tu mesa</p>
         <div class="catalogo">
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/sorrentinos.png" alt="Sorrentinos">
                     <h3>Sorrentinos</h3>
                     <p>Mejor acompañado con: Salsa Carusso</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/ravioles.png" alt="Ravioles">
                     <h3>Ravioles</h3>
                     <p>Mejor acompañado con: Salsa Carbonara</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/nioquis.png" alt="Ñoquis de papa">
                     <h3>Ñoquis de papa</h3>
                     <p>Mejor acompañado con: Salsa Bolognesa</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/tallarines.png" alt="Tallarines">
                     <h3>Tallarines</h3>
@@ -64,28 +78,28 @@
         <h3>Pasta cruda</h3>
         <p>Prontas pata hervir, servir y disfrutar. Sin conservantes</p>
         <div class="catalogo">
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/sorrentinos_crudos.png" alt="Sorrentinos">
                     <h3>Sorrentinos</h3>
                     <p>Tiempo de cocción: suben y 2 minutos de hervor</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/ravioles_crudos.png" alt="Ravioles">
                     <h3>Ravioles</h3>
                     <p>Tiempo de cocción: prontos cuando suben</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/raviolones_crudos.png" alt="Raviolones">
                     <h3>Raviolones</h3>
                     <p>Tiempo de cocción: suben y 1 minuto de hervor</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/tallarines_verdura_crudos.png" alt="Tallarines de verdura">
                     <h3>Tallarines de verdura</h3>
@@ -96,28 +110,28 @@
         <h3>Pastas especiales</h3>
         <p>Pasta light, sin sal, integrales y apta para celíacos</p>
         <div class="catalogo">
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/raviolones_integrales.png" alt="Raviolones integrales">
                     <h3>Raviolones integrales</h3>
                     <p>Tiempo de cocción: suben y 2 minutos de hervor</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/sorrentinos_light.png" alt="Sorrentinos light">
                     <h3>Sorrentinos light</h3>
                     <p>Tiempo de cocción: suben y 2 minutos de hervor</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/nioquis_crudos.png" alt="Ñoquis sin gluten">
                     <h3>Ñoquis sin gluten</h3>
                     <p>Tiempo de cocción: suben y 2 minutos de hervor</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/capeletis_sin_sal.png" alt="Capeletis sin sal">
                     <h3>Capeletis sin sal</h3>
@@ -128,28 +142,28 @@
         <h3>Otros productos</h3>
         <p>Salsas y quesos</p>
         <div class="catalogo">
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/carusso.png" alt="Salsa carusso">
                     <h3>Salsa carusso</h3>
                     <p>Crema de leche, jamon y champignones</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/bolognesa.png" alt="Salsa bolognesa">
                     <h3>Salsa bolognesa</h3>
                     <p>Salsa de tomate y carne magra</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/parmesano.png" alt="Queso parmesano">
                     <h3>Queso parmesano</h3>
                     <p>Paquete individual de 80g o 200g</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/cuatro_quesos.png" alt="Salsa cuatro quesos">
                     <h3>Salsa cuatro quesos</h3>
@@ -173,4 +187,8 @@
         </div>    
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>AOS.init();</script>
 </html>
