--- a/paginas/postres.html
+++ b/paginas/postres.html
@@ -6,54 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Postres</title>
     <link rel="icon" href="../imagenes/favicon.png" type="image/png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
     <header>
         <div class="headerLogo">
-            <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>    
-            <h1>Pastas Trivelli's</h1>      
+            <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
+            <h1>Pastas Trivelli's</h1>
         </div>
-        <nav>
-            <ul>
-                <li><a href="pastas.html">Pastas</a></li>
-                <li><a href="postres.html">Postres</a></li>
-                <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid justify-content-end">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#desplegable" aria-controls="desplegable" aria-expanded="false">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="desplegable">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link-active" aria-current="page" href="pastas.html">Pastas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link-active" href="postres.html">Postres</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link-active" href="sobreNosotros.html">Sobre nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link-active" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+          </nav>
     </header>
     <section class="cuerpo">
         <h2 class="tituloCentrado animate__animated animate__fadeIn">Postres</h2>
         <h3>Tartas y postres</h3>
         <p>Probá una de nuestras delicias</p>
         <div class="catalogo">
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/lemon_pie.png" alt="Lemon Pie">
                     <h3>Lemon Pie</h3>
                     <p>Aproximadamente 1kg</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/rogel.png" alt="Torta Rogel">
                     <h3>Torta Rogel</h3>
                     <p>Aproximadamente 1,5kg</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/cheese_cake_frutos_rojos.png" alt="Cheese Cake frutos rojos">
                     <h3>Cheese Cake frutos rojos</h3>
                     <p>Aproximadamente 1,5kg</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/chaja_anana.png" alt="Chajá de ananá y nueces">
                     <h3>Chajá de ananá y nueces</h3>
@@ -62,28 +76,28 @@
             </article>
         </div>
         <div class="catalogo">
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/chaja_durazno.png" alt="Chajá de durazno">
                     <h3>Chajá de durazno</h3>
                     <p>Aproximadamente 1,5kg</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/torta_carrot.png" alt="Torta Carrot Cake queso y zanahoria">
                     <h3>Torta Carrot Cake queso y zanahoria</h3>
                     <p>Aproximadamente 0,5kg</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/postre_chocolate.png" alt="Postre de chocolate">
                     <h3>Postre de chocolate</h3>
                     <p>Aproximadamente 1,8kg</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/torta_manzana.png" alt="Torta de manzana, pasas y nueces">
                     <h3>Torta de manzana, pasas y nueces</h3>
@@ -94,28 +108,28 @@
         <h3>Postres especiales</h3>
         <p>Delicias light y sin gluten</p>
         <div class="catalogo">
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/postre_chocolate_sin_gluten.png" alt="Postre de chocolate sin gluten">
                     <h3>Postre de chocolate sin gluten</h3>
                     <p>Aproximadamente 1,8kg</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/tiramisu_light.png" alt="Tiramisú light">
                     <h3>Tiramisú light</h3>
                     <p>Aproximadamente 1,5kg</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/cheese_cake.png" alt="Cheese Cake light">
                     <h3>Cheese Cake light</h3>
                     <p>Aproximadamente 1,5kg</p>
                 </a>
             </article>
-            <article class="recomendado">
+            <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/rogel_sin_gluten.png" alt="Torta Rogel sin gluten">
                     <h3>Torta Rogel sin gluten</h3>
@@ -139,4 +153,8 @@
         </div>    
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>AOS.init();</script>
 </html>
