--- a/index.html
+++ b/index.html
@@ -41,27 +41,29 @@
             </div>
           </nav>
     </header>
-    <!-- <div id="carouselExampleControls" class="carousel slide contenedorCarrusel" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="imagenes/slider_uno.png" class="imagenSlide" alt="Slide uno">
+    <div class="contenedorCarrusel">
+        <div id="carrusel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner" >
+                <div class="carousel-item active">
+                    <img src="imagenes/slide_uno.png" class=" w-100" alt="Slide 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/slide_dos.png" class="w-100" alt="Slide 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/slide_tres.png" class=" w-100" alt="Slide 3">
+                </div>
             </div>
-            <div class="carousel-item">
-                <img src="imagenes/slider_dos.png" class="imagenSlide" alt="Slide dos">
-            </div>
-            <div class="carousel-item">
-                <img src="imagenes/slider_tres.png" class=imagenSlide" alt="Slide tres">
-            </div>
+            <a class="carousel-control-prev" href="#carrusel" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carrusel" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </a>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div> -->
+    </div>    
     <section class="cuerpo">
         <h2>Recomendados del día:</h2>
         <div class="catalogo">
