--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid justify-content-end">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#desplegable" aria-controls="desplegable" aria-expanded="false">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#desplegable" aria-controls="desplegable" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="desplegable">
