--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class="cuerpo">
         <h2>Recomendados del día:</h2>
         <div class="catalogo">
-            <article data-aos="flip-left" data-aos-duration="1500" class="recomendado recomendadoUno">
+            <article data-aos="flip-left" data-aos-duration="1500" class="recomendado">
                 <a href="">
                     <img src="imagenes/nioquis.png" alt="Ñoquis de papa">
                     <h3>Ñoquis de papa</h3>
