--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="../imagenes/favicon.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../estilos.css">
+    <link rel="stylesheet" href="../css/estilosSass.css">
 </head>
 <body>
     <header>
@@ -42,21 +42,21 @@
     </header>
     <div class="cuerpo">
         <h2 class="tituloCentrado textoPaddingBottom animate__animated animate__fadeIn">Contacto</h2>
-        <main class="caja">
+        <main class="cajaEstrellas">
             <section>
                 <h3>Porque para nosotros lo más importante son nuestros clientes, te invitamos a que nos dejes tu valoración
                 </h3>
                 <div class="estrellas">
                     <input id="estrellaUno" type="radio" name="valoracion" value="5">
-                    <label for="estrellaUno"><!--★--></label>
+                    <label for="estrellaUno"></label>
                     <input id="estrellaDos" type="radio" name="valoracion" value="4">
-                    <label for="estrellaDos"><!--★--></label>
+                    <label for="estrellaDos"></label>
                     <input id="estrellaTres" type="radio" name="valoracion" value="3">
-                    <label for="estrellaTres"><!--★--></label>
+                    <label for="estrellaTres"></label>
                     <input id="estrellaCuatro" type="radio" name="valoracion" value="2">
-                    <label for="estrellaCuatro"><!--★--></label>
+                    <label for="estrellaCuatro"></label>
                     <input id="estrellaCinco" type="radio" name="valoracion" value="1">
-                    <label for="estrellaCinco"><!--★--></label>
+                    <label for="estrellaCinco"></label>
                 </div>
                 <form action="" method="post">
                     <input type="text" name="nombreValoracion" id="txtNombreValoracion" placeholder="Ingrese su nombre"
