--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
         <input class="boton" type="submit" value="Ver galería">
     </section>
     <footer>
-        <div>
+        <div class="slogan">
             <h2>Pastas Trivelli's</h2>
             <p>Generaciones haciendo pastas</p>
         </div>
         <div class="redes">
-            <p>Date una vuelta por nuestras redes:</p>
             <ul>
                 <li><a href="#"><img src="imagenes/facebook.png" alt="Facebook"></a></li>
                 <li><a href="#"><img src="imagenes/instagram.png" alt="Instagram"></a></li>
