--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -14,7 +14,7 @@
     <header>
         <div class="headerLogo">
             <div>
-                <a href="index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
+                <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
             </div>
             <h1>Pastas Trivelli's</h1>
         </div>
